<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RingABell</string>
    <string name="copyrighted">Powered By TechSync</string>
    <string name="profile">Profile</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="groups">Groups</string>
    <string name="hello_world">Hello world!</string>
    <string name="pending_reminders">Pending Reminders</string>
    
    <string name="calendar">Calendar</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="app_users">App Users</string>
    <string name="reminders_list">Reminders List</string>
    <string name="contacts">Contacts</string>
    <string name="rating">Rating</string>
    <string name="no_block_user">No Block User</string>
    <string name="no_contacts">No Contacts</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
     <string name="company_profile">Company Profile</string>
    <string name="add_block_user">Add Block User</string>
    <string name="menu_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_bell">Reminders</string>
    <string name="rating_app">Rate Our App</string>
    <string name="review">Review</string>
    <string name="review_text">Write Your Review</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_location_found">Location</string>
    <string name="action_profile">Profile</string>
    <string name="action_Group"> Add Group</string>
    <string name="action_rating"> Rate App</string>
    <string name="action_settings">Settings</string>
    <string name="action_aboutus">About Us</string>
    <string name="action_check_updates">Check Updates</string>
    <string name="login_header">Login</string>
    <string name="reminder_header">Add Reminder</string>
    <string name="add_reminder_header">Add Reminder</string>
    <string name="reminder_title">Type or Record Reminder</string>
    <string name="title_activity_reminder_main">ReminderMainActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_add_reminder">AddReminderActivity</string>
    
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_reminder_popup">ReminderPopupActivity</string>
    <string name="title_activity_display_contact">DisplayContactActivity</string>
    <string name="action_calendar">Calendar</string>
    <string name="title_activity_number_validation">NumberValidationActivity</string>
    <string name="otp_titile_text">Enter Your OTP, Received through SMS</string>
    <string name="group_header_text">Please Add Group name and Group icon</string>
    <string name="group_edit_text">Type Group Name</string>
    <string name="group_edit_status">Type Status</string>
    <string name="group_contact_text">Add Group Contact</string>
    <string name="action_done">Done</string>
    <string name="action_delete">Delete</string>
    <string name="action_add_group">ADD NEW</string>
    <string name="action_add">Add</string>
    <string name="confirm">Ring-A-Bell Reminder</string>
    <string name="title_activity_audio_record">AudioRecordActivity</string>
    <string name="title_activity_record_audio">RecordAudioActivity</string>
    <string name="toast_crash">RingABell Stopped</string>
    <string name="title_activity_profile_name">Enter Your Name</string>
    <string name="title_activity_profiles">Update Profile</string>
    <string name="action_name_type">Type Your Name</string>
    <string name="yourname">Name</string>
    <string name="yourstatus">Status</string>
    <string name="action_status_type">Type Your Status</string>
    <string name="Recording">Record Audio</string>
    <string name="searchContact">Search by name or number</string>
    <string name="more">View More Options</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="play">play</string>
    <string name="username_text">User Name</string>
    <string name="owner">OWNER</string>
    <string name="status_text">Hey I am using Ring-A-Bell</string>
    <string name="title_activity_new_reminder_history">NewReminder</string>
    <string name="title_activity_block_user">Blocked Contacts</string>
    <string name="title_activity_blockcontacts">Contacts</string>
    <string name="action_block_user">Block User</string>
    <string name="all_user">All User</string>
    <string name="play_audio">Play Audio</string>
    <string name="action_invite_user">Invite User</string>
    <string name="title_activity_contact_reminder_screen">ContactReminderScreen</string>
    <string name="title_activity_calender_screen">CalenderScreen</string>
    <string name="title_activity_calendar_ui">CalendarUI</string>
    <string name="reminder">RingABell Reminder</string>
    <string name="title_activity_reminder_list_screen">ReminderListScreen</string>
    <string name="title_activity_my_group">MyGroupActivity</string>
    <string name="title_activity_mains">MainsActivity</string>
    <string name="no_internet_reponse">Please enable interent, otherwise response will go through SMS.</string>
	<string name="title">Title</string>
	<string name="response_text">Type Your Response</string>
</resources>