<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
 
        />
   <TextView
        android:id="@+id/internetConnectionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_reponse"
        android:textSize="20sp"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
 
        />
     <EditText
        android:id="@+id/responseEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/response_text"
        android:imeOptions="actionDone"
        android:maxLength="200"
        android:textAppearance="?android:attr/textAppearanceSmall"
 
        />
</LinearLayout>
