<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    tools:context=".RatingActivity" >
    
<LinearLayout 
    android:id="@+id/headerLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"    
    >
    
    <TextView
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_margin="10dp"
       android:textStyle="bold"
        android:text="@string/rating_app"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#e36055"
         />

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1.0"
        
        android:rating="2.0" 
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp" />
  </LinearLayout>
  <LinearLayout 
    android:id="@+id/centerLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:layout_centerInParent="true"
    android:layout_below="@+id/headerLayout"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:text="@string/review"
        android:textColor="#e36055"
        android:textAppearance="?android:attr/textAppearanceLarge"
        
         />

    <EditText
        android:id="@+id/reviewEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/review_text"
        
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:maxLines="3"
        android:maxLength="200"
        android:ems="10" >

        
    </EditText>
    </LinearLayout>
<LinearLayout 
   		android:id="@+id/buttonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"        
        android:layout_alignParentBottom="true"
    	android:orientation="horizontal"
    >
<Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"
        
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:background="@drawable/bg_button_rounded"
        android:text="@string/action_done" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:background="@drawable/bg_button_rounded"
        android:text="@string/action_cancel" />
</LinearLayout>
</RelativeLayout>