<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="40sp" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" >

        <ImageView
            android:id="@+id/imgStart"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/start_record"
            android:text="@string/start"
            android:layout_margin="5dp"
            style="@style/DefaultButtonPressed"
             />

        <ImageView
            android:id="@+id/imgPlay"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/ic_action_play"
			android:layout_margin="5dp"
            android:text="@string/play"
            style="@style/DefaultButtonPressed"
            />

        <ImageView
            android:id="@+id/imgStop"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/ic_action_stop"
            android:layout_margin="5dp"
            android:text="@string/stop" 
            style="@style/DefaultButtonPressed"
            />
    </LinearLayout>
</LinearLayout>
