<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical"
    tools:context=".ReminderScreen" >

    
      <Button
            android:id="@+id/dismiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e36055"
            android:layout_margin="3dp"
            android:text="Dismiss"
            android:textColor="@color/white" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/SenderPic"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/ic_user" />

        <TextView
            android:id="@+id/sender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:singleLine="true"
            android:text="Number"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/digi_clock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="Time"
            android:textColor="#000000"
            android:textSize="45sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/rLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:gravity="center"
            android:padding="5dp"
            android:text="Location"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/rmic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/ic_audio"
            android:visibility="gone" />

        <Chronometer
            android:id="@+id/chrono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgPlay"
            style="@style/DefaultButtonPressed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_action_play"
            android:text="@string/play" />

        <ImageView
            android:id="@+id/imgPause"
            style="@style/DefaultButtonPressed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_action_stop"
            android:text="@string/stop" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/rTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            
            android:maxLines="3"
            android:scrollbars="vertical"
            android:padding="2dp"
            android:text="Title"
            android:textSize="18sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#e36055" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:textColor="@color/white" >

        <Button
            android:id="@+id/snooze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="#e36055"
            android:text="Snooze"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="#e36055"
            android:text="Response"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>